css/onenanohost.webflow.css
.w-checkbox {
  display: block;
  margin-bottom: 5px;
  padding-left: 20px;
}

.w-checkbox::before {
  content: ' ';
  display: table;
  -ms-grid-column-span: 1;
  grid-column-end: 2;
  -ms-grid-column: 1;
  grid-column-start: 1;
  -ms-grid-row-span: 1;
  grid-row-end: 2;
  -ms-grid-row: 1;
  grid-row-start: 1;
}

.w-checkbox::after {
  content: ' ';
  display: table;
  -ms-grid-column-span: 1;
  grid-column-end: 2;
  -ms-grid-column: 1;
  grid-column-start: 1;
  -ms-grid-row-span: 1;
  grid-row-end: 2;
  -ms-grid-row: 1;
  grid-row-start: 1;
  clear: both;
}

.w-checkbox-input {
  float: left;
  margin-bottom: 0px;
  margin-left: -20px;
  margin-right: 0px;
  margin-top: 4px;
  line-height: normal;
}

.w-checkbox-input--inputType-custom {
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  border-right-width: 1px;
  border-top-color: #ccc;
  border-bottom-color: #ccc;
  border-left-color: #ccc;
  border-right-color: #ccc;
  border-top-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-right-style: solid;
  width: 12px;
  height: 12px;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.w-checkbox-input--inputType-custom.w--redirected-checked {
  background-color: #3898ec;
  border-top-color: #3898ec;
  border-bottom-color: #3898ec;
  border-left-color: #3898ec;
  border-right-color: #3898ec;
  background-image: url('https://d3e54v103j8qbb.cloudfront.net/static/custom-checkbox-checkmark.589d534424.svg');
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
}

.w-checkbox-input--inputType-custom.w--redirected-focus {
  box-shadow: 0px 0px 3px 1px #3898ec;
}

.w-form-formrecaptcha {
  margin-bottom: 8px;
}

h2 {
  margin-top: 20px;
  margin-bottom: 10px;
  font-size: 32px;
  line-height: 36px;
  font-weight: bold;
}

.body {
  font-family: Montserrat, sans-serif;
  min-height: 100%;
  background-color: #fff;
  font-family: Arial, sans-serif;
  font-size: 14px;
  line-height: 20px;
  color: #333;
  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
}

.brand {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 60px;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.logo {
  color: #fff;
  font-weight: 700;
}

.navbar {
  padding-right: 30px;
  padding-left: 30px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  background-color: #000034;
}

.nav-links {
  padding-right: 30px;
  padding-left: 30px;
  font-family: 'Open Sans', sans-serif;
  color: hsla(0, 0%, 100%, 0.9);
  font-weight: 600;
}

.nav-links:hover {
  color: #fff;
}

.nav-links.w--current {
  color: #fff;
}

.nav-menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.button {
  margin-left: 20px;
  padding-right: 25px;
  padding-left: 25px;
  border-radius: 20px;
  background-color: #fff;
  font-family: 'Open Sans', sans-serif;
  color: #000034;
  font-weight: 600;
}

.button:hover {
  background-color: #fff;
  color: #4a90e2;
}

.main {
  display: block;
  flex: 1 1 auto;
  height: 100%;
  padding-top: 0px;
  padding-bottom: 30px;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #000034;
}

.domains-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.domains-card {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 31%;
  height: 250px;
  margin: 10px;
  padding: 10px 20px 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  background-color: #fff;
}

.domains-title {
  font-family: 'Open Sans', sans-serif;
  color: #000034;
  font-size: 18px;
  line-height: 24px;
  font-weight: 600;
  text-align: center;
}

.domain-desc {
  margin-bottom: 0px;
  font-family: 'Open Sans', sans-serif;
  color: #676686;
  text-align: center;
}

.domains-tag-text {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  color: #4a90e2;
  font-size: 25px;
  font-weight: 700;
  text-align: center;
}

.domains-tag {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 10px;
  padding-bottom: 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.domain-btn {
  width: 80%;
  border: 1px solid #dce9f9;
  border-radius: 20px;
  background-color: rgba(56, 152, 236, 0);
  font-family: 'Open Sans', sans-serif;
  color: #000034;
  font-weight: 600;
  text-align: center;
}

.domain-btn:hover {
  border-color: #dce9f9;
  background-color: #dce9f9;
  color: #4a90e2;
  font-weight: 600;
}

.heading {
  margin-top: 30px;
  margin-bottom: 25px;
  font-family: Montserrat, sans-serif;
  color: #fff;
  font-size: 28px;
  font-weight: 300;
  text-align: center;
}

.footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 10px;
  padding-bottom: 10px;
  -webkit-box-align: end;
  -webkit-align-items: flex-end;
  -ms-flex-align: end;
  align-items: flex-end;
  border-top: 1px solid #29324a;
  background-color: #fff;
}

.footer-text {
  display: block;
  margin-bottom: 0px;
  color: #9899ae;
  text-align: center;
}

.links {
  color: #fff;
  font-weight: 500;
  text-decoration: none;
}

.links.links-blue {
  color: #4a90e2;
  font-weight: 600;
}

.links.links-tag {
  display: inline-block;
  margin-right: 5px;
  margin-left: 5px;
  padding: 5px 10px;
  border-radius: 20px;
  background-color: #4a90e2;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

.paragraph {
  font-family: 'Open Sans', sans-serif;
  color: hsla(0, 0%, 100%, 0.8);
}

.q-item {
  text-align: left;
}

.heading-2 {
  margin-top: 20px;
  margin-bottom: 10px;
  color: #fff;
  font-size: 22px;
  font-weight: 300;
}

.qa-item {
  margin-top: 30px;
  margin-bottom: 30px;
}

.link {
  text-decoration: none;
}

.example-item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100px;
  margin-top: 0px;
  margin-bottom: 20px;
  padding-left: 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  border-radius: 5px;
  background-color: hsla(0, 0%, 100%, 0.25);
}

.image {
  margin-bottom: 10px;
}

.nano-adress {
  color: #fff;
}

.heading-3 {
  margin-top: 30px;
  color: #fff;
  font-size: 32px;
}

.bold-text {
  display: block;
  margin-right: auto;
  margin-left: auto;
  font-size: 28px;
  font-weight: 300;
  text-align: left;
}

.example-text {
  margin-left: -10px;
  color: hsla(0, 0%, 100%, 0.8);
}

.text-block {
  margin-top: 10px;
  color: hsla(0, 0%, 100%, 0.8);
}

.form-block {
  width: 60%;
  margin-top: 30px;
}

.label {
  font-family: 'Open Sans', sans-serif;
  color: #fff;
  font-weight: 600;
}

.submit-button {
  margin-top: 30px;
  padding-right: 25px;
  padding-left: 25px;
  border-radius: 20px;
}

.form-item {
  margin-bottom: 25px;
}

.recaptcha {
  margin-top: 25px;
}

.form-checkbox {
  margin-top: 25px;
}

.checkbox-label {
  color: #fff;
}

@media (max-width: 991px) {
  .main {
    height: 100%;
    padding-right: 10px;
    padding-left: 10px;
  }
  .domains-wrapper {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  .domains-card {
    width: 45%;
  }
  .form-block {
    width: 100%;
  }
}

@media (max-width: 767px) {
  .main {
    display: block;
    padding-right: 20px;
    padding-left: 20px;
  }
  .domains-wrapper {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .domains-card {
    width: 100%;
  }
  .nano-adress {
    font-size: 11px;
  }
  .form-block {
    width: 100%;
  }
}

@media (max-width: 479px) {
  .main {
    display: block;
    width: auto;
    max-width: 100%;
  }
  .domains-card {
    width: 100%;
  }
  .paragraph {
    overflow: hidden;
  }
  .heading-2 {
    width: auto;
  }
  .qa-item {
    position: relative;
  }
  .container {
    position: relative;
  }
  .nano-adress {
    max-width: 100%;
    color: #fff;
    font-size: 7px;
  }
  .form-block {
    width: 100%;
  }
}

.w-icon-nav-menu {
    color: #FFF;
}

.w-nav-button.w--open {
    background-color: #1d1d50;
}

nav.nav-menu.w-nav-menu.w--nav-menu-open {
    background-color: #1d1d50;
    display: flex !important;
    flex-direction: column;
}

nav.nav-menu.w-nav-menu.w--nav-menu-open a.button.w-button {
    width: 50%;
    display: inline-block;
    margin: 0 auto;
    position: relative;
    left: 0;
    margin-bottom: 20px;
}

